--- a/teamspeak/templates/networkpolicy.yaml
+++ b/teamspeak/templates/networkpolicy.yaml
@@ -29,4 +29,37 @@ spec:
         - protocol: TCP
           port: {{ .Values.webquery.port }}
   {{- end }}
+{{- if .Values.mariadb.enabled }}
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: {{ include "teamspeak.mariadb.fullname" . }}-allow
+  labels:
+{{ include "teamspeak.labels" . | nindent 4 }}
+spec:
+  podSelector:
+    matchLabels:
+{{ include "teamspeak.selectorLabels" . | nindent 6 }}
+      app.kubernetes.io/component: primary
+  policyTypes:
+  - Ingress
+  - Egress
+  {{- if .Values.networkPolicy.allowAll }}
+  ingress:
+  - {}
+  egress:
+  - {}
+  {{- else }}
+  ingress:
+    - from:
+        - podSelector:
+            matchLabels:
+{{ include "teamspeak.selectorLabels" . | nindent 14 }}
+          namespaceSelector: {}
+      ports:
+        - protocol: TCP
+          port: 3306
+  {{- end }}
+{{- end }}
 {{- end }}
